--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -6,6 +6,6 @@ body {
   font-family: 'Libre Baskerville', serif;
 }
 
-.temp {
-  background-color: #00000025;
+footer {
+  font-family: 'Kalam', Times, serif;
 }
